Feat: Add none type to Spacing UI-Kits

--- a/src/Pages/Home/Main/Content.mdx
+++ b/src/Pages/Home/Main/Content.mdx
@@ -14,7 +14,7 @@ import { Typography, Spacing, Button } from 'src/UI-Kits';
   </Typography>
 </Spacing>
 
-<Spacing margin={['md', 'auto', 'auto']}>
+<Spacing margin={['md', 'none', 'none']}>
   <Button.Group>
     <Button variant="invert-outline" text="Fork this project on GitHub">
       <a href="https://github.com/aminpaks/portfolio-reactjs" />
